--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,13 @@ matrix:
     - go: tip
 
 install:
-  - go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover github.com/Masterminds/glide
-  - glide install
+  - go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover github.com/golang/lint/golint golang.org/x/tools/cmd/goimports
+  - go get .
 
 script:
+  - goimports -d .
+  - go vet .
+  - golint .
   - gotestcover -coverprofile="cover.out" -race -covermode="count" $(go list ./... | grep -v /vendor/)
 
 after_success:
