--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
     - go: tip
 
 install:
-  - go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover github.com/golang/lint/golint golang.org/x/tools/cmd/goimports
-  - go get .
+  - go get github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/pierrre/gotestcover github.com/Masterminds/glide github.com/golang/lint/golint golang.org/x/tools/cmd/goimports
+  - glide install
 
 script:
   - goimports -d .
