--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ install:
   - glide install
 
 script:
-  - goimports -d .
-  - go vet .
-  - golint .
+  - goimports -d $(glide novendor)
+  - go vet $(glide novendor)
+  - golint $(glide novendor)
   - gotestcover -coverprofile="cover.out" -race -covermode="count" $(go list ./... | grep -v /vendor/)
 
 after_success:
