--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "license-checker": "^25.0.1",
     "ory-prettier-styles": "1.3.0",
     "prettier": "2.7.1"
   }
